[project]
name = "vae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "msgspec>=0.21.1",
    "numpy>=2.5.0",
    "tensorboard>=2.21.0",
    "torch>=2.12.1",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.390",
]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
